--- a/main.mustache
+++ b/main.mustache
@@ -1,1 +1,5 @@
 Greetings, my name is {{name}} and welcome to my Github front page.  Today is {{date}}.
+
+# Stats
+
+[![Top Langs](https://github-readme-stats.vercel.app/api/top-langs/?username=KedoKudo&show_icons=true&theme=radical)](https://github.com/KedoKudo/github-readme-stats)
