--- a/main.mustache
+++ b/main.mustache
@@ -3,3 +3,5 @@ Greetings, my name is {{name}} and welcome to my Github front page.  Today is {{
 # Stats
 
 [![Top Langs](https://github-readme-stats.vercel.app/api/top-langs/?username=KedoKudo&show_icons=true&theme=radical)](https://github.com/KedoKudo/github-readme-stats)
+
+[![{{name}}'s github stats](https://github-readme-stats.vercel.app/api?username=KedoKudo)](https://github.com/KedoKudo/github-readme-stats)
