add one more card

--- a/main.mustache
+++ b/main.mustache
@@ -2,6 +2,6 @@ Greetings, my name is {{name}} and welcome to my Github front page.  Today is {{
 
 # Stats
 
-[![Top Langs](https://github-readme-stats.vercel.app/api/top-langs/?username=KedoKudo&show_icons=true&theme=radical)](https://github.com/KedoKudo/github-readme-stats)
+[![Top Langs](https://github-readme-stats.vercel.app/api/top-langs/?username=KedoKudo&show_icons=true&theme=vue)](https://github.com/KedoKudo/github-readme-stats)
 
-[![{{name}}'s github stats](https://github-readme-stats.vercel.app/api?username=KedoKudo)](https://github.com/KedoKudo/github-readme-stats)
+[![{{name}}'s github stats](https://github-readme-stats.vercel.app/api?username=KedoKudo&theme=vue)](https://github.com/KedoKudo/github-readme-stats)
