--- a/main.mustache
+++ b/main.mustache
@@ -1,5 +1,11 @@
 Greetings, my name is {{name}} and welcome to my Github front page.  Today is {{date}}.
 
+# Technologies & Skills
+
+![](https://img.shields.io/badge/<OS>-<Linux>-informational?style=flat&logo=<Linux>&logoColor=white&color=2bbc8a)
+![](https://img.shields.io/badge/<OS>-<MacOS>-informational?style=flat&logo=<Apple>&logoColor=white&color=2bbc8a)
+
+
 # Stats
 
 [![{{name}}'s github stats](https://github-readme-stats.vercel.app/api?username=KedoKudo&theme=vue)](https://github.com/KedoKudo/github-readme-stats)
