--- a/main.mustache
+++ b/main.mustache
@@ -10,7 +10,7 @@ Greetings, my name is {{name}} and welcome to my Github front page.  Today is {{
 ![](https://img.shields.io/badge/Tools-Cmake-informational?style=flat&logo=Cmake&logoColor=white&color=2bbc8a)
 ![](https://img.shields.io/badge/Tools-Docker-informational?style=flat&logo=Docker&logoColor=white&color=2bbc8a)
 ![](https://img.shields.io/badge/Tools-Jupyter-informational?style=flat&logo=Jupyter&logoColor=white&color=2bbc8a)
-![](https://img.shields.io/badge/Tools-VSCode-informational?style=flat&logo=vscode&logoColor=white&color=2bbc8a)
+![](https://img.shields.io/badge/Tools-VSCode-informational?style=flat&logo=Visual Studio Code&logoColor=white&color=2bbc8a)
 
 
 # Stats
