--- a/main.mustache
+++ b/main.mustache
@@ -1,4 +1,4 @@
-Greetings, my name is {{name}} and welcome to my Github front page.  Today is {{date}}.
+Greetings, my name is {{name}} and welcome to my Github front page.  Last update is on {{date}}.
 
 # Technologies & Skills
 
